--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.11",
     "next": "13.3.0",
     "react": "18.2.0",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   }
